--- a/iloveruby/14.c-from-ruby/Rakefile
+++ b/iloveruby/14.c-from-ruby/Rakefile
@@ -12,19 +12,33 @@ task :default do
 end
 
 namespace :compile do
-  desc 'Compile Example 01'
+  desc 'Compile 01 (C example)'
   task :e01 do
     id="01"
     system("gcc -c -fPIC #{id}-ffi.c -o #{id}-ffi.o")
     system("gcc -shared -o #{id}-ffi.so #{id}-ffi.o")
   end
+
+  desc 'Compile 02 (Java example)'
+  task :e02 do
+    name="Test"
+    system("javac #{name}.java")
+    system("jar -cvf #{name}.jar #{name}.class")
+  end
 end
 
 namespace :clean do
-  desc 'Clean temp files from example 01'
+  desc 'Clean 01 (Remove temp files)'
   task :e01 do
     id="01"
     system("rm #{id}-ffi.o")
     system("rm #{id}-ffi.so")
+  end
+
+  desc 'Clean 02 (Remove temp files)'
+  task :e02 do
+    name = 'Test'
+    system("rm #{name}.class")
+    system("rm #{name}.jar")
   end
 end
