--- a/charlas/rails/vagrant/Vagrantfile
+++ b/charlas/rails/vagrant/Vagrantfile
@@ -2,12 +2,13 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.define "opensuse15" do |i|
+  config.vm.define "iloveruby" do |i|
     i.vm.box = "generic/opensuse15"
-    i.vm.hostname = "profesor.curso1920"
+    i.vm.hostname = "iloveruby.curso1920"
     i.vm.network "public_network", bridge: [
-      "wlp1s0",
+      "enp0s20u2",
       "enp2s0",
+      "wlp1s0",
     ]
 
     i.vm.synced_folder "./", "/vagrant"
@@ -15,7 +16,7 @@ Vagrant.configure("2") do |config|
       zypper in -y vim tree nmap
     SHELL
     i.vm.provider "virtualbox" do |v|
-      v.name = 'opensuse15'
+      v.name = 'iloveruby'
       v.memory = 2048
     end
   end
