--- a/charlas/rails/vagrant/Vagrantfile
+++ b/charlas/rails/vagrant/Vagrantfile
@@ -13,7 +13,9 @@ Vagrant.configure("2") do |config|
 
     i.vm.synced_folder "./", "/vagrant"
     i.vm.provision "shell", inline: <<-SHELL
-      zypper in -y vim tree nmap
+      zypper in -y vim tree nmap git
+      systemctl stop firewalld
+      systemctl disable firewalld
     SHELL
     i.vm.provider "virtualbox" do |v|
       v.name = 'iloveruby'
