--- a/charlas/rails/vagrant/Vagrantfile
+++ b/charlas/rails/vagrant/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
     i.vm.synced_folder "./", "/vagrant"
     i.vm.provision "shell", inline: <<-SHELL
       zypper in -y vim tree nmap git
+      zypper in -y gcc make kernel-devel ruby-devel
       systemctl stop firewalld
       systemctl disable firewalld
     SHELL
