--- a/iloveruby/37-jekyll/demo03/_config.yml
+++ b/iloveruby/37-jekyll/demo03/_config.yml
@@ -17,3 +17,8 @@ defaults:
       path: ""
     values:
       layout: "default"
+
+#plugins:
+#  - jekyll-feed
+#  - jekyll-sitemap
+#  - jekyll-seo-tag
