--- a/charlas/rails/vagrant/Vagrantfile
+++ b/charlas/rails/vagrant/Vagrantfile
@@ -12,10 +12,21 @@ Vagrant.configure("2") do |config|
 
     i.vm.synced_folder "./", "/vagrant"
     i.vm.provision "shell", inline: <<-SHELL
-      zypper in -y vim tree nmap git
-      zypper in -y gcc make kernel-devel ruby-devel
-      systemctl stop firewalld
-      systemctl disable firewalld
+      echo "[INFO] Installing tools..."
+      zypper --non-interactive --quiet in vim tree nmap git
+      
+      echo "[INFO] Installing rails..."
+      zypper --non-interactive --quiet in gcc make kernel-devel ruby-devel
+      # systemctl stop firewalld
+      # systemctl disable firewalld
+      gem install rails
+
+      echo "[INFO] Installing sqlite3..."
+      zypper --non-interactive --quiet in sqlite3 sqlite3-devel
+      zypper --non-interactive --quiet in gcc gcc10-c++
+      ln -s /usr/bin/gcc-10 /usr/bin/g++
+      gem install mini_racer -v 0.4.0
+      echo "alias rails='rails.ruby2.5'" >> /home/vagrant/.alias
     SHELL
     i.vm.provider "virtualbox" do |v|
       v.name = 'iloveruby'
