--- a/compose/mysql/docker-compose.yaml
+++ b/compose/mysql/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: "secret"
     volumes:
       - ./data:/var/lib/mysql
