--- a/examples/ruby/22.games/words-game/Rakefile
+++ b/examples/ruby/22.games/words-game/Rakefile
@@ -1,3 +1,5 @@
+#!/usr/bin/env rake
+
 require "bundler/setup"
 require "bundler/gem_tasks"
 require "bump/tasks"
@@ -8,4 +10,12 @@ task :default => :run
 
 task :run do
   exec "./bin/words-game"
+end
+
+require 'rake/testtask'
+
+Rake::TestTask.new do |t|
+  t.libs << 'lib/words-game'
+  t.test_files = FileList['tests/lib/words-game/*_test.rb']
+  t.verbose = true
 end
