[N] tty box examples.

--- a/examples/ruby/41.gems/tty.toolkit/Gemfile
+++ b/examples/ruby/41.gems/tty.toolkit/Gemfile
@@ -5,6 +5,7 @@ source "https://rubygems.org"
 gem "tty"
 gem "tty-prompt"
 gem "tty-progressbar"
+gem "pastel"
 gem "tty-table"
 gem "tty-markdown"
-gem "pastel"
+gem "tty-box"
