--- a/charlas/teuton/base-de-datos/ejemplo.1/config.yaml
+++ b/charlas/teuton/base-de-datos/ejemplo.1/config.yaml
@@ -1,27 +1,6 @@
 ---
 global:
 cases:
-- tt_members: Samara
-  tt_moodle_id: salbbla@gobiernodecanarias.org
-  host1_ip: 172.19.99.2
-  host1_port: 2231
-  host1_username: vagrant
-  host1_password: vagrant
-  id: '01'
-
-- tt_members: Javier
-  tt_moodle_id: fcrinav@gobiernodecanarias.org
-  host1_ip: 172.19.99.2
-  host1_port: 2232
-  host1_username: vagrant
-  host1_password: vagrant
-  id: '02'
-
-- tt_members: Daniel
-  tt_moodle_id: ddiagarf@gobiernodecanarias.org
-  tt_skip: true
-  host1_ip: 172.19.99.2
-  host1_port: 2233
-  host1_username: vagrant
-  host1_password: vagrant
-  id: '03'
+- tt_members: Local
+  sqlite_version: '3.38'
+  database_file: 'files/persons.db'
