--- a/examples/ruby/41.gems/tty.toolkit/Gemfile
+++ b/examples/ruby/41.gems/tty.toolkit/Gemfile
@@ -2,11 +2,12 @@
 
 source "https://rubygems.org"
 
+gem "pastel"
 gem "tty"
+gem "tty-box"
 gem "tty-prompt"
 gem "tty-progressbar"
-gem "pastel"
 gem "tty-table"
 gem "tty-markdown"
 gem "tty-tree"
-gem "tty-box"
+gem "tty-spinner"
