--- a/examples/lang.rust/07.cli/mygrep/Cargo.toml
+++ b/examples/lang.rust/07.cli/mygrep/Cargo.toml
@@ -10,3 +10,7 @@ default-run = "mygrep"
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 indicatif = "0.17.2"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "2.1"
