--- a/examples/haskell/02.types/Rakefile
+++ b/examples/haskell/02.types/Rakefile
@@ -1,6 +1,8 @@
 require "fileutils"
 
 task :default do
-  files = Dir.glob("*") - Dir.glob("*.hs")
-  FileUtils.rm files
+  keep = [ "Rakefile" ] + Dir.glob("*.hs")
+  remove = Dir.glob("*") - keep
+  puts remove
+  FileUtils.rm remove
 end
